name:                flappy-bird
version:             0.1.0.0
synopsis:            Flappy bird example
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  index.html

executable flappy-bird
  main-is:
    Main.hs
  build-depends:
    base < 5,
    containers,
    transformers,
    random,
    miso
  default-language:
    Haskell2010
